[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
clap = { version = "4.0", features = ["derive"] }
russh = "0.55.0"
tokio = { version = "1.48.0", features = ["full"] }
